--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ Django = "^4.0.5"
 djangorestframework = "^3.13.1"
 pytest-django = "^4.5.2"
 pytz = "^2022.1"
+python-dotenv = "^0.20.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
