--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ snapshottest = "^0.6.0"
 pytest-django = "^4.5.2"
 pytest-randomly = "^3.12.0"
 pydocstyle = {extras = ["toml"], version = "^6.1.1"}
+django-extensions = "^3.1.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
