--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ addopts = """
 inherit = false
 ignore = ["D100","D203"]
 
+[tool.isort]
+profile = "black" 
+
 [tool.poetry.dependencies]
 python = "^3.10"
 Django = "^4.0.5"
@@ -37,6 +40,8 @@ pytest-django = "^4.5.2"
 pytest-randomly = "^3.12.0"
 pydocstyle = {extras = ["toml"], version = "^6.1.1"}
 django-extensions = "^3.1.5"
+isort = "^5.10.1"
+pre-commit = "^2.19.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
