--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,10 @@ addopts = """
 
 [tool.pydocstyle]
 inherit = false
-ignore = ["D100","D203"]
+ignore = ["D100","D203", "D212"]
 
 [tool.isort]
-profile = "black" 
+profile = "black"
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -26,6 +26,7 @@ pytest-django = "^4.5.2"
 pytz = "^2022.1"
 python-dotenv = "^0.20.0"
 django-filter = "^22.1"
+drf-spectacular = "^0.22.1"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
