--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,15 @@ __pycache__
 db.sqlite3
 media
 
-# Environments 
-.env 
-.venv 
-env/ 
-venv/ 
-ENV/ 
-env.bak/ 
-venv.bak/ 
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
 .python-version
+
+# Docker cache
+database
