--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ python-dotenv = "^0.20.0"
 django-filter = "^22.1"
 drf-spectacular = "^0.22.1"
 django-cors-headers = "^3.13.0"
+djangorestframework-simplejwt = "^5.2.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
@@ -41,9 +42,10 @@ snapshottest = "^0.6.0"
 pytest-django = "^4.5.2"
 pytest-randomly = "^3.12.0"
 pydocstyle = {extras = ["toml"], version = "^6.1.1"}
-django-extensions = "^3.1.5"
+django-extensions = "^3.2.0"
 isort = "^5.10.1"
 pre-commit = "^2.19.0"
+nplusone = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
