--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,12 +9,12 @@ repos:
     -   id: check-yaml
     -   id: check-added-large-files
 -   repo: https://github.com/pycqa/isort
-    rev: 5.10.1
+    rev: "5.10.1"
     hooks:
     -   id: isort
         name: isort (python)
 -   repo: https://gitlab.com/pycqa/flake8
-    rev: 4.0.1
+    rev: "5.0.4"
     hooks:
     -   id: flake8
         args:
@@ -22,7 +22,7 @@ repos:
         - "--max-complexity=18"
         - "--select=B,C,E,F,W,T4,B9"
 -   repo: https://github.com/psf/black
-    rev: 22.3.0
+    rev: "22.8.0"
     hooks:
     -   id: black
         language_version: python3.10
