--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,28 @@ ignore = ["D100","D203", "D212"]
 [tool.isort]
 profile = "black"
 
+[tool.coverage.run]
+source = ["."]
+
+[tool.coverage.report]
+omit = [
+	"*/tests*",
+	"*/migrations/*",
+	"*/__init__.py",
+	"*/asgi.py",
+	"*/manage.py",
+	"*/settings.py",
+	"*/wsgi.py",
+	]
+
+[tool.coverage.project.default]
+informational = true
+
+[tool.coverage.patch.default]
+informational = true
+
+
+
 [tool.poetry.dependencies]
 python = "^3.10"
 Django = "^4.0.5"
@@ -46,6 +68,7 @@ pre-commit = "^2.19.0"
 nplusone = "^1.0.0"
 flake8 = "^5.0.4"
 black = "^22.8.0"
+pytest-cov = "^3.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
